--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "version": "0.0.1",
     "type": "module",
     "scripts": {
-        "start-api": "gunicorn --reload --log-level debug api.app:app",
+        "install-python": "pip install -r api/requirements.txt",
+        "install-packages": "concurrently \"npm run install-python\" \"npm install\"",
+        "start-api": "gunicorn --reload --access-logfile '-' api.app:app",
         "dev": "concurrently \"vite\" \"npm run start-api\"",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -16,6 +18,7 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
+        "axios": "^1.6.8",
         "framer-motion": "^11.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
