--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "framer-motion": "^11.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-markdown": "^9.0.1"
+        "react-markdown": "^9.0.1",
+        "remark-gfm": "^4.0.0"
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.23",
