--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "axios": "^1.6.8",
+        "chakra-ui-markdown-renderer": "^4.1.0",
         "framer-motion": "^11.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-markdown": "^9.0.1",
         "remark-gfm": "^4.0.0"
     },
     "devDependencies": {
