--- a/package.json
+++ b/package.json
@@ -5,38 +5,46 @@
     "version": "0.0.1",
     "type": "module",
     "scripts": {
-        "install-python": "pip install -r api/requirements.txt",
-        "install-packages": "concurrently \"npm run install-python\" \"npm install\"",
+        "install-python-packages": "pip install -r api/requirements.txt",
+        "install-packages": "concurrently \"npm run install-python-packages\" \"npm install\"",
         "start-api": "gunicorn --reload --access-logfile '-' api.app:app",
         "dev": "concurrently \"vite\" \"npm run start-api\"",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "format": "prettier --write .",
+        "format": "prettier --write ./src",
         "preview": "vite preview"
     },
     "dependencies": {
-        "@chakra-ui/react": "^2.8.2",
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
+        "@radix-ui/react-select": "^2.0.0",
+        "@radix-ui/react-slot": "^1.0.2",
         "axios": "^1.6.8",
-        "chakra-ui-markdown-renderer": "^4.1.0",
-        "framer-motion": "^11.2.4",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.379.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "remark-gfm": "^4.0.0"
+        "react-markdown": "^9.0.1",
+        "react-toastify": "^10.0.5",
+        "rehype-highlight": "^7.0.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.23",
         "@types/chrome": "^0.0.268",
+        "@types/node": "^20.12.12",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@vitejs/plugin-react": "^4.2.1",
+        "autoprefixer": "^10.4.19",
         "concurrently": "^8.2.2",
         "eslint": "^8.57.0",
         "eslint-plugin-react": "^7.34.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.6",
+        "postcss": "^8.4.38",
         "prettier": "^3.2.5",
+        "tailwindcss": "^3.4.3",
         "vite": "^5.2.0"
     }
 }
