--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "version": "0.0.2",
     "type": "module",
     "scripts": {
-        "install-python-packages": "pip install -r api/requirements.txt",
-        "install-packages": "concurrently \"npm run install-python-packages\" \"npm install\"",
-        "start-api": "gunicorn --reload --access-logfile '-' api.app:app",
-        "dev": "concurrently \"vite\" \"npm run start-api\"",
+        "postinstall": "pip install -r api/requirements.txt",
+        "api": "gunicorn --reload --access-logfile '-' api.app:app",
+        "extension": "vite",
+        "dev": "concurrently \"npm run extension\" \"npm run api\"",
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "format": "prettier --write ./src",
@@ -18,8 +18,6 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
-        "@radix-ui/react-select": "^2.0.0",
-        "@radix-ui/react-slot": "^1.0.2",
         "axios": "^1.6.8",
         "chakra-ui-markdown-renderer": "^4.1.0",
         "framer-motion": "^11.2.10",
