--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "app.py",
+            "src": "main.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "app.py",
+            "dest": "main.py",
             "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
             "headers": {
                 "Access-Control-Allow-Origin": "*"
