--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-markdown": "^8.0.6",
+        "react-syntax-highlighter": "^15.5.0",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^1.0.0"
