--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@google/generative-ai": "^0.21.0",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-dropdown-menu": "^2.1.1",
-        "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-toast": "^1.2.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -25,8 +24,7 @@
         "react-markdown": "^8.0.6",
         "react-syntax-highlighter": "^15.5.0",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7",
-        "vaul": "^1.0.0"
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.25",
