--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@radix-ui/react-dialog": "^1.1.2",
+        "@hookform/resolvers": "^3.10.0",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-label": "^2.1.1",
+        "@radix-ui/react-select": "^2.1.5",
+        "@radix-ui/react-separator": "^1.1.1",
+        "@radix-ui/react-slot": "^1.1.1",
+        "@radix-ui/react-switch": "^1.1.2",
+        "@radix-ui/react-tabs": "^1.1.2",
         "@radix-ui/react-toast": "^1.2.2",
         "axios": "^1.7.9",
         "class-variance-authority": "^0.7.0",
@@ -22,10 +28,12 @@
         "lucide-react": "^0.454.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.2",
         "react-markdown": "^9.0.1",
         "react-syntax-highlighter": "^15.6.1",
         "tailwind-merge": "^2.5.4",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.1"
     },
     "devDependencies": {
         "@crxjs/vite-plugin": "^2.0.0-beta.25",
