--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -30,17 +30,14 @@ dependencies = [
     "uvicorn==0.34.0",
     "tiktoken (>=0.8.0,<0.9.0)",
     "openai (>=1.60.2,<2.0.0)",
-    "black (>=25.1.0,<26.0.0)"
+    "black (>=25.1.0,<26.0.0)",
+    "stripe (>=11.5.0,<12.0.0)"
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
-packages = [
-    { include = "api" }
-]
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
