--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "version": "0.0.4",
     "type": "module",
     "scripts": {
+        "start": "concurrently \"npm run dev\" \"npm run api\"",
         "dev": "vite",
         "api": "uvicorn api.app:app --reload",
         "build": "vite build",
@@ -46,7 +47,7 @@
         "@types/react-dom": "^18.3.1",
         "@vitejs/plugin-react": "^4.3.3",
         "autoprefixer": "^10.4.20",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.1.2",
         "eslint": "^9.14.0",
         "eslint-plugin-react": "^7.37.2",
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
