--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ dependencies = [
     "tiktoken (>=0.8.0,<0.9.0)",
     "openai (>=1.60.2,<2.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "stripe (>=11.5.0,<12.0.0)"
+    "stripe (>=11.5.0,<12.0.0)",
+    "pyyaml (>=6.0.2,<7.0.0)"
 ]
 
 [build-system]
