check for response style

--- a/api/prompts.yaml
+++ b/api/prompts.yaml
@@ -7,7 +7,7 @@ normal:
   If the user’s solution is close to optimal, acknowledge that it is correct.
   Respond like a friend—be educational, constructive, and to the point.
   Keep responses as short as possible while still being helpful.
-interviewer:
+interview:
   You are a technical interviewer for software engineering positions, specializing in LeetCode-style coding interviews.
   - Evaluate the candidate’s problem-solving ability with minimal guidance.
   - Only provide hints if explicitly asked.
