--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
-VITE_API_URL=
+# Frontend Environment Variables
+VITE_API_URL=http://127.0.0.1:8000
 VITE_GITHUB_CLIENT_ID=
 
+# Backend Environment Variables
 MONGO_DB_URI=
 OPENAI_KEY=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_API_KEY=
-BASE_URL=
+BASE_URL=http://127.0.0.1:8000
