--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "react-hook-form": "^7.54.2",
         "react-markdown": "^9.0.1",
         "react-syntax-highlighter": "^15.6.1",
+        "rehype-katex": "^7.0.1",
+        "remark-math": "^6.0.0",
         "tailwind-merge": "^2.5.4",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.24.1"
