--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,7 +14,7 @@ httpx==0.28.1 ; python_version >= "3.12"
 idna==3.10 ; python_version >= "3.12"
 jiter==0.8.2 ; python_version >= "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.12"
-openai==1.60.2 ; python_version >= "3.12"
+openai==1.65.2 ; python_version >= "3.12"
 packaging==24.2 ; python_version >= "3.12"
 pathspec==0.12.1 ; python_version >= "3.12"
 platformdirs==4.3.6 ; python_version >= "3.12"
@@ -23,11 +23,12 @@ pydantic-settings==2.7.1 ; python_version >= "3.12"
 pydantic==2.10.5 ; python_version >= "3.12"
 pymongo==3.12.0 ; python_version >= "3.12"
 python-dotenv==1.0.1 ; python_version >= "3.12"
+pyyaml==6.0.2 ; python_version >= "3.12"
 regex==2024.11.6 ; python_version >= "3.12"
 requests==2.32.3 ; python_version >= "3.12"
 sniffio==1.3.1 ; python_version >= "3.12"
 starlette==0.41.3 ; python_version >= "3.12"
-stripe==11.5.0 ; python_version >= "3.12"
+stripe==11.6.0 ; python_version >= "3.12"
 tiktoken==0.8.0 ; python_version >= "3.12"
 tqdm==4.67.1 ; python_version >= "3.12"
 typing-extensions==4.12.2 ; python_version >= "3.12"
