--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,16 +29,17 @@ dependencies = [
     "typing-extensions==4.12.2",
     "urllib3==2.3.0",
     "uvicorn==0.34.0",
-    "openai (>=1.60.2,<2.0.0)",
-    "black (>=25.1.0,<26.0.0)",
-    "stripe (>=11.5.0,<12.0.0)",
+    "openai>=1.60.2,<2.0.0",
+    "stripe>=11.5.0,<12.0.0",
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
 
 [tool.poetry.group.dev.dependencies]
 ipykernel = "^6.29.5"
-
+black = "^25.1.0"
