--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "litcoach",
-    "description": "Chrome extension to help you with LeetCode problems",
+    "description": "Chrome extension that integrates AI-powered assistance to LeetCode and automatically syncs successful submissions to GitHub",
     "private": true,
-    "version": "0.0.6",
+    "version": "0.0.7",
     "type": "module",
     "scripts": {
         "start": "concurrently \"npm run dev\" \"npm run api\"",
@@ -19,6 +19,7 @@
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-hover-card": "^1.1.6",
         "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-popover": "^1.1.6",
         "@radix-ui/react-scroll-area": "^1.2.2",
