update import paths and add Privacy Policy button; rename delete account component

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,12 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./src/*"],
+            "@styles/*": ["./src/styles/*"],
+            "@hooks/*": ["./src/hooks/*"],
+            "@components/*": ["./src/components/*"],
+            "@options/*": ["./src/options/*"],
+            "@sidepanel/*": ["./src/sidepanel/*"]
         }
     }
 }
