update README with additional prerequisites and installation steps; improve package description; add subscription cancellation reminder in delete account component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "litcoach",
-    "description": "Chrome extension that integrates AI-powered assistance to LeetCode and automatically syncs successful submissions to GitHub",
+    "description": "Provides AI-powered assistance on LeetCode and automatically syncs your successful submissions to GitHub",
     "private": true,
     "version": "0.0.7",
     "type": "module",
